--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -1540,6 +1540,10 @@ html {
   overflow: hidden;
 }
 
+.main-content--home {
+  overflow: visible;
+}
+
 hr {
   clear: both;
   border-top: solid $color-border;
