--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -81,6 +81,7 @@
   {%- endif -%}
   {%- if template.name == 'index' -%}
     <link rel="preload" as="style" href="{{ 'collection-grid-item.scss.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
+    <link rel="preload" as="style" href="{{ 'promo-block.scss.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
   {%- endif -%}
   {%- if template.name == 'cart' -%}
     <link rel="preload" as="style" href="{{ 'tail.datetime-harx-light.css' | asset_url }}" onload="this.onload=null;this.rel='stylesheet'">
@@ -114,6 +115,7 @@
     {%- endif -%}
     {%- if template.name == 'index' -%}
       <link rel="stylesheet" href="{{ 'collection-grid-item.scss.css' | asset_url }}">
+      <link rel="stylesheet" href="{{ 'promo-block.scss.css' | asset_url }}">
     {%- endif -%}
     {%- if template.name == 'cart' -%}
       <link rel="stylesheet" href="{{ 'tail.datetime-harx-light.css' | asset_url }}">
@@ -157,7 +159,7 @@
       {%- elsif show_account_sidebar == true -%}
         {% section 'account-sidebar' %}
       {%- endif -%}
-      <main class="main-content grid__item{% if show_sidebar == true or show_account_sidebar == true %} medium-up--four-fifths{% endif %}" id="MainContent" role="main">
+      <main class="main-content{% if request.page_type == 'index' %} main-content--home{% endif %} grid__item{% if show_sidebar == true or show_account_sidebar == true %} medium-up--four-fifths{% endif %}" id="MainContent" role="main">
         {%- if show_hr == true -%}
           <hr class="hr--border-top small--hide">
           {%- endif -%}
