--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -145,12 +145,12 @@
                       <br><small>{{ item.variant.title }}</small>
                     {% endunless %}
                     <br>
-                    {%- if item.properties._bold_bundle_price_rules_external_id != blank -%}
+                    {%- if item.properties._bold_bundle_price_rules_external_id != blank and cart.attributes.delivery_method == 'pickup' -%}
                       <small class="cart__policies">{{ cart.attributes.delivery_method }}</small>
                     {%- endif -%}
                     {% if item.properties._method == 'pickup' %}
                       <small class="cart__policies">{{ 'layout.product.pickup' | t }}: {{ item.properties.pickup_location }}</small>
-                    {% elsif item.properties._method == blank and cart.attributes.pickup_address != blank %}
+                    {% elsif item.properties._method == blank and cart.attributes.delivery_method == 'pickup' %}
                     <small class="cart__policies">{{ cart.attributes.pickup_address }}</small>
                     {% endif %}
                   </p>
