Add warning message on Cart when delivery dates has not been chosen

--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -344,6 +344,7 @@
                   </div>
                 {%- endif -%}
                 <span class="js-checking-dates"></span>
+                <p class="cart__error-message hide js-delivery-empty">{{ 'layout.cart.empty_delivery' | t }}</p>
                 <p class="cart__error-message hide js-no-dates">{{ 'layout.cart.no_date_available' | t }}</p>
               </div>
             {%- endif -%}
