--- a/layout/checkout.liquid
+++ b/layout/checkout.liquid
@@ -50,6 +50,8 @@
           color: #FFFFFF;
         }
         .input-checkbox:checked, .input-radio:checked {
+          border-color: #D9D9D9;
+          border-width: 5px;
           -webkit-box-shadow: 0 0 0 10px {{settings.checkout_link_color}} inset;
           box-shadow: 0 0 0 10px {{settings.checkout_link_color}} inset;
         }
