add tag for non-restricted delivery

--- a/sections/product-template.liquid
+++ b/sections/product-template.liquid
@@ -448,6 +448,9 @@
       const isMultiOption = true;
     {%- endif -%}
   {%- endif -%}
+  {%- if product.tags contains 'delivers-everywhere' -%}
+    const isDeliveredEverywhere = true;
+  {%- endif -%}
 </script>
 
 
